# soft-serve

./: CHANGELOG.md  Cargo.toml  README.md  release.sh  release.toml
.github/workflows/: release.yml
src/: ftp.rs  http.rs  lib.rs  main.rs
