[package]
name = "soft-serve"
version = "0.0.1"
description = "Easily serve your filesystem."
license = "MIT"
repository = "https://github.com/tsar-boomba/soft-serve"
edition = "2021"

[[bin]]
name = "sfs"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["cli"]
http = ["hyper", "hyper-util", "http-body-util", "tokio-stream", "tokio-util", "mime_guess"]
ftp = ["libunftp", "unftp-sbe-fs", "async-tftp"]
cli = ["clap", "tracing-subscriber", "http", "ftp"]

[dependencies]
color-eyre = "0.6.3"
tokio = { version = "1.37.0", features = ["sync", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1.40"

# cli
clap = { version = "4.5.4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], optional = true }

# http
http-body-util = { version = "0.1.1", optional = true }
hyper = { version = "1.3.1", features = ["server", "http1", "http2"], optional = true }
hyper-util = { version = "0.1.3", features = ["tokio", "server", "server-auto"], optional = true }
mime_guess = { version = "2.0.4", default-features = false, optional = true }
tokio-stream = {version = "0.1.15", optional = true}
tokio-util = { version = "0.7.10", features = ["io"], optional = true }

# ftp
libunftp = { version = "0.19.1", optional = true }
unftp-sbe-fs = { version = "0.2.4", optional = true }
async-tftp = {version = "0.3.6", optional = true }
