[package]
name = "soft-serve"
version = "0.0.8"
description = "Easily serve your filesystem."
license = "MIT"
repository = "https://github.com/tsar-boomba/soft-serve"
edition = "2021"

[[bin]]
name = "sfs"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["cli"]
http = ["hyper", "hyper-util", "http-body-util", "tokio-stream", "tokio-util", "mime_guess"]
ftp = ["libunftp", "unftp-sbe-fs", "async-tftp"]
cli = ["clap", "tracing-subscriber", "http", "ftp"]

[dependencies]
color-eyre = "0.6.5"
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "macros", "fs"] }
tracing = "0.1.41"

# cli
clap = { version = "4.5.45", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"], optional = true }

# http
http-body-util = { version = "0.1.3", optional = true }
hyper = { version = "1.7.0", features = ["server", "http1", "http2"], optional = true }
hyper-util = { version = "0.1.16", features = ["tokio", "server", "server-auto"], optional = true }
mime_guess = { version = "2.0.5", default-features = false, optional = true }
tokio-stream = {version = "0.1.17", optional = true }
tokio-util = { version = "0.7.16", features = ["io"], optional = true }

# ftp
libunftp = { version = "0.21.0", optional = true }
unftp-sbe-fs = { version = "0.3.0", optional = true }
async-tftp = {version = "0.3.6", optional = true }
